fix scroll x during animation on mobile

--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -1,6 +1,7 @@
 .experience {
   background-color: white;
   transform: translateZ(0);
+  overflow-x: hidden;
 
   .container {
     .step-line {
